Blender crashes when outputting large images #44541

Closed
opened 2015-04-29 03:41:36 +02:00 by Carlo Andreacchio · 16 comments

System Information
Windows 7 x64 gtx580
Amazon EC2 - c4.8xlarge: 60 GiB of memory, 36 vCPUs, 64-bit platform

Blender Version
Broken: 4288ab1

Short description of error
When dealing with large images, blender crashes at saving out

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. Press f12
  3. crash

We are after a ~42000x21000 image (A0 300DPI). 60GB of ram should be able to handle it...

largeexportbug.blend.

**System Information** Windows 7 x64 gtx580 Amazon EC2 - c4.8xlarge: 60 GiB of memory, 36 vCPUs, 64-bit platform **Blender Version** Broken: 4288ab1 **Short description of error** When dealing with large images, blender crashes at saving out **Exact steps for others to reproduce the error** 1. Open attached blend file 2. Press f12 3. crash We are after a ~42000x21000 image (A0 300DPI). 60GB of ram should be able to handle it... [largeexportbug.blend](https://archive.blender.org/developer/F167818/largeexportbug.blend).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Hm. The problem is, -we- don't have this kind of machine here...can you send us your machine over for bug testing? We'll be sure to return it when it's over ;)...Just kidding, but honestly I really don't know if we can debug this.

Hm. The problem is, -we- don't have this kind of machine here...can you send us your machine over for bug testing? We'll be sure to return it when it's over ;)...Just kidding, but honestly I really don't know if we can debug this.

I would be willing to pay for a ec2 server and give you guys SSH access if you want?

I would be willing to pay for a ec2 server and give you guys SSH access if you want?
Member

Added subscriber: @Ton

Added subscriber: @Ton
Member

We (and Antonis) have a 64 GB system here for testing.
Interesting bug (even though the resolution is insane!)

We (and Antonis) have a 64 GB system here for testing. Interesting bug (even though the resolution is insane!)

Turns out we do have such a beast here, we'll see if we can make it work.

Turns out we do have such a beast here, we'll see if we can make it work.

Cheers for the look in... I know it is kind of ridiculous!!!

Cheers for the look in... I know it is kind of ridiculous!!!

So!

That was fun...managed to make blender spew the file, but I can't confirm if the file is really correct since programs here can't open it. Will to see if there's some way to do it tomorrow.

In the mean time you might want to test the patch which is here: size_support_2.patch

So! That was fun...managed to make blender spew the file, but I can't confirm if the file is really correct since programs here can't open it. Will to see if there's some way to do it tomorrow. In the mean time you might want to test the patch which is here: [size_support_2.patch](https://archive.blender.org/developer/F168105/size_support_2.patch)

Added subscriber: @ZauberParacelsus

Added subscriber: @ZauberParacelsus

No programs will open it? If it won't open even in blender, that could be an additional problem for Carlo.

No programs will open it? If it won't open even in blender, that could be an additional problem for Carlo.

Thanks for the patch psy-fi! I am not sure if I will be able to test it today or tomorrow, but I should have some time this weekend.

As for opening the files, I have found that the best viewer for these large images is irfanview, however it is only for windows. GIMP (under windows) also handles them but a 42x21k image requires about 10gb of ram.

Thanks for the patch psy-fi! I am not sure if I will be able to test it today or tomorrow, but I should have some time this weekend. As for opening the files, I have found that the best viewer for these large images is irfanview, however it is only for windows. GIMP (under windows) also handles them but a 42x21k image requires about 10gb of ram.

This issue was referenced by 2909975385

This issue was referenced by 290997538590d54387602a37879ad4cffbc311da

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2909975385.

Closed by commit 2909975385.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44541
No description provided.